# ke-garmin-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
docs/ADR/: 0001-personal-garmin-access-strategy.md  0002-token-storage-and-environment-rules.md  0003-phase1-scope-and-interface.md  0004-mcp-and-docker-delivery.md  README.md
scripts/: bootstrap.sh  mcp_stdio.sh
src/garmin_mcp/: __init__.py  cli.py  client.py  config.py  mcp_server.py
